<?xml version="1.0"?>
<package format="3">
  <name>cam_intrinsic_calibrator</name>
  <version>1.0.0</version>
  <description>zoro vesion of camera intrinsic calibrator</description>
  <author>Lingbo Yu</author>
  <maintainer email="lingbo.yu@tusimple.ai">Lingbo Yu</maintainer>
  <license>TuSimple Only</license>

  <!-- <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend> -->

  <depend>middleware</depend>
  <depend>ament_python</depend>
  <depend>std_msgs</depend>


<export>
  <build_type>ament_python</build_type>
</export>

</package>